Added two new pages - about and blog

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 
 ---
-
+<a href="/">Home</a>
+<a href="/about/">About</a>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -11,6 +12,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro site</h1>
+		<h1>Astro page</h1>
 	</body>
 </html>
