--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,18 @@
----
+!---
 
 ---
-<a href="/">Home</a>
-<a href="/about/">About</a>
+
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Document</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+		<a href="/blog/">Blog</a>
 		<h1>Astro page</h1>
 	</body>
 </html>
